[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnt"
version = "0.3.2.4"
description = "A Python tool for video-based traffic analytiscs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Zhenyu Wang", email = "wonstran@hotmail.com" },
]
keywords = ["traffic", "vehicle", "trajectory", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]

dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "ultralytics>=8.4.1",
  "boxmot",
  "cython",
  "cython_bbox",
  "easydict",
  "easyocr",
  "faiss-cpu",
  "faiss-gpu-cu12",
  "filterpy",
  "gdown",
  "geopandas",
  "h5py",
  "lapx",
  "loguru",
  "matplotlib>=3.9",
  "motmetrics",
  "ninja",
  "numpy>=2.2,<3",
  "numpy_indexed",
  "opencv-contrib-python",
  "opencv-python",
  "pandas>=2.2",
  "Pillow",
  "prettytable",
  "pycocotools",
  "pyyaml",
  "requests",
  "scikit-image",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "shapely",
  "shapelysmooth",
  "sympy",
  "tabulate",
  "tensorboard",
  "termcolor",
  "thop",
  "tqdm",
  "vidgear",
  "yacs",
  "dateparser",
  "openpyxl",
  "pytz",
]

[project.urls]
Homepage = "https://github.com/wonstran/dnt"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F",   
  "I",        
  "UP",       
  "B",        
  "SIM",      
  "RUF",       
  "D"       
]

[tool.ruff.format]
